<resources>
    <string name="app_name">BabyGotAPP</string>

    <!-- Create an array to hold the values of the titleSpinner -->
    <string name="counter1">Milk</string>

    <!-- Create an array to hold the values of the locationSpinner -->
    <string name="counter2">Tummy-time</string>

    <string name="counter3">Sleep</string>
    <string name="counter4">Diapers</string>
    <string-array name="titles">
        <item>Select Title</item>
        <item>Doctors Appointment</item>
        <item>Pediatrician Appointment</item>
        <item>Bath Time</item>
    </string-array>
    <string-array name="locations">
        <item>Select Location</item>
        <item>Doctors Office</item>
        <item>Pediatricians Office</item>
        <item>Home</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_update_stats">Update Stats</string>
    <string name="title_white_noise">White Noise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Baby Profile</string>
    <string name="title_calendar">Calendar</string>

    <string name="milk_progress">oz Milk</string>
    <string name="sleep_progress">Hours Sleep</string>
    <string name="tummyTime_progress">Minutes Tummy Time</string>
    <string name="diaper_progress">Diapers</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="header_dashboard">Today</string>

</resources>