<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.team6.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_update_stats"
        android:name="com.team6.ui.UpdateStatsFragment"
        android:label="@string/title_update_stats"
        tools:layout="@layout/fragment_update_stats" />

    <fragment
        android:id="@+id/navigation_white_noise"
        android:name="com.team6.ui.WhiteNoiseFragment"
        android:label="@string/title_white_noise"
        tools:layout="@layout/fragment_white_noise" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.team6.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.team6.ui.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>