<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@id/navigation_update_stats"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_update_stats" />

    <item
        android:id="@id/navigation_white_noise"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_white_noise" />

    <item
        android:id="@id/navigation_calendar"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="Calendar" />

    <item
        android:id="@id/navigation_profile"
        android:icon="@drawable/ic_stroller_black_24dp"
        android:title="Baby Profile" />



</menu>